<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseEditorActivity">
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/courseAlertsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/course_alerts"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentorEmail" />

    <EditText
        android:id="@+id/courseName"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/courseNameTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mentorEmail"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/mentorEmailTxt"
        app:layout_constraintTop_toBottomOf="@+id/mentorPhone" />

    <TextView
        android:id="@+id/mentorEmailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/mentor_email"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentorPhoneTxt" />

    <EditText
        android:id="@+id/mentorPhone"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/mentorPhoneTxt"
        app:layout_constraintTop_toBottomOf="@+id/mentorName" />

    <TextView
        android:id="@+id/mentorPhoneTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/mentor_phone"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentorNameTxt" />

    <EditText
        android:id="@+id/mentorName"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/mentorNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/courseStatusSpinner" />

    <TextView
        android:id="@+id/mentorNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/mentor_name"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseStatusTxt" />

    <TextView
        android:id="@+id/courseStatusTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/course_status"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseEndDateTxt" />

    <EditText
        android:id="@+id/courseEndDate"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/courseEndDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/courseStartDate" />

    <TextView
        android:id="@+id/courseEndDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/end_date"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseStartDateTxt" />

    <EditText
        android:id="@+id/courseStartDate"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/courseStartDateTxt"
        app:layout_constraintTop_toBottomOf="@+id/courseName" />


    <Button
        android:id="@+id/courseClearBtn"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:onClick="courseClearBtnAction"
        android:text="@string/clear"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseSubmitBtn" />

    <Button
        android:id="@+id/courseSubmitBtn"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:onClick="courseSubmitBtnAction"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/courseClearBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseAlertsTB" />

    <TextView
        android:id="@+id/courseNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/course_name"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseStartDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/start_date"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseNameTxt" />

    <Spinner
        android:id="@+id/courseStatusSpinner"
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        app:layout_constraintStart_toEndOf="@+id/courseStatusTxt"
        app:layout_constraintTop_toBottomOf="@+id/courseEndDate" />

    <ToggleButton
        android:id="@+id/courseAlertsTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseAlertsTxt" />

</android.support.constraint.ConstraintLayout>
</ScrollView>